# autonomous_car_w_gazebo

./: CMakeLists.txt  README.md
launch/: sim_launch.py
scripts/: decision_maker.py  pid_controller.py
src/: sensor_cleaner.cpp
worlds/: world.sdf
